rozwiązany problem gdy businessCard jest nullem